# evmaudit

./: .gitignore  LICENSE  README.md  implementacion_pipeline.md  pyproject.toml
docs/: correlator.md  echidna_adapter.md  exceptions.md  normalizer.md  reporter.md  runner.md  swc_catalog.md
src/evmaudit/: __init__.py  correlator.py  echidna_adapter.py  exceptions.py  main.py  normalizer.py  reporter.py  runner.py  swc_catalog.py
