[project]
name = "evmaudit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Rovira Martínez", email = "pardalaco@gmail.com" },
    { name = "Paula Suárez Prieto", email = "Paula Suárez Prieto" },
    { name = "Adrián Moreno Martín", email = "adrimore2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "eth>=0.0.1",
    "mythril>=0.24.8",
    "setuptools<70.0.0",
    "slither-analyzer>=0.9.2",
    "solc-select>=1.2.0",]


[project.scripts]
evmaudit = "evmaudit.main:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
